--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -18,6 +18,7 @@ Admin=
 After this user is created they can be given access to albums.=
 Albums=
 Album view=
+All photos have been downloaded in %s zipfiles.
 All photos=
 An error occurred.=
 An unknown file upload error occurred.=
@@ -53,6 +54,8 @@ Default view=
 Deleting %s=
 Description for first photo=
 Description for second photo=
+Download zipfile=
+Downloaded %s of %s photos.=
 E-Mail Photo=
 Edit Photos (Page %s/%s)=
 Fields specified below will apply to all images imported.=
@@ -76,6 +79,8 @@ Insufficient permissions to edit photo=
 Invalid path=
 Lightbox (Page %s/%s)=
 List=
+Maximum number of files per zipfile=
+Maximum size per zipfile=
 Missing a temporary folder.=
 Most Photographed People=
 Most Photographed Places=
@@ -129,6 +134,7 @@ The uploaded file exceeds the upload_max_filesize directive (%s) in php.ini.=
 The uploaded file was only partially uploaded.=
 The user %s is currently defined as the default user and does not have permission to change its preferences. The current values are shown below but any changes made will be ignored until a different default user is defined.=
 The user '%s' is currently defined as the default user and does not have permission to change its password.=
+The zipfile is being created...=
 There are %s photos=
 There are no photos=
 There is %s photo=
@@ -141,12 +147,15 @@ To import images already on the server, specify the absolute path of a file name
 To upload and import a local file, browse to the file and specify the destination path (relative to the top level image dir) in which it should be placed.=
 Tree=
 Up=
+Use alphanumeric, - and _. Do not provide an extension.=
 User=
 Users=
 Welcome %s. %s currently contains=
 Yes=
 You can upload a single image or a zip or tar file of images.=
+You have requested the download of %s photos, with a total size of %s=
 You may search for photos %s taken %s or %s modified %s in the past %s days.=
+You need to have ZIP support in PHP to download zip files=
 Your Zoph Account=
 Your mail has been sent.=
 Your password has been changed=
@@ -179,6 +188,7 @@ camera make=
 camera model=
 can browse people=
 can browse places=
+can download zipfiles=
 can import=
 can leave comments=
 can view details of people=
@@ -227,6 +237,8 @@ destination path=
 display all EXIF info=
 display camera info=
 display=
+download next file=
+download=
 edit photos %s to %s of %s=
 edit photos=
 edit preferences=
