--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -16,9 +16,9 @@ About=
 Add comment=
 Admin=
 After this user is created they can be given access to albums.=
-Albums=
 Album view=
-All photos have been downloaded in %s zipfiles.
+Albums=
+All photos have been downloaded in %s zipfiles.=
 All photos=
 An error occurred.=
 An unknown file upload error occurred.=
@@ -27,6 +27,7 @@ As an admin, user %s has access to all albums.=
 Autocomplete=
 Automatic coverphoto=
 Automatic thumbnail=
+Average ranking=
 Browser Default=
 Categories=
 Category view=
@@ -79,6 +80,7 @@ Insufficient permissions to edit photo=
 Invalid path=
 Lightbox (Page %s/%s)=
 List=
+Lowest ranked=
 Maximum number of files per zipfile=
 Maximum size per zipfile=
 Missing a temporary folder.=
@@ -128,6 +130,8 @@ See this photo in %s=
 Send feedback to %s.=
 Skipping %s: File does not exist.=
 Skipping %s: Unsupported file type.=
+Sort Name=
+Sort order for subalbums and categories=
 The image you requested could not be displayed.=
 The uploaded file exceeds the MAX_UPLOAD setting in config.inc.php (%s).=
 The uploaded file exceeds the upload_max_filesize directive (%s) in php.ini.=
@@ -364,6 +368,7 @@ size of photos=
 size=
 skip=
 slideshow=
+sort name=
 spouse=
 state=
 stop=
