Req#1506959: Zoph Pages feature that allows customization of the first page of an album/category/person/place.

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -13,8 +13,10 @@ A Photo from %s=
 A photo will be watermarked if the photo level is higher than the watermark level.=
 A possible cause is the upload_max_filesize variable in php.ini=
 About=
+Add a page:=
 Add comment=
 Admin=
+Adminpage=
 After this user is created they can be given access to albums.=
 Album view=
 Albums=
@@ -40,6 +42,8 @@ Confirm deletion of '%s' and its subalbums:=
 Confirm deletion of '%s' and its subcategories:=
 Confirm deletion of '%s'=
 Confirm deletion of comment '<b>%s</b>' by '<b>%s</b>'=
+Confirm deletion of this page=
+Confirm deletion of this pageset=
 Confirm deletion of this relationship=
 Copy Color Scheme=
 Could not copy %s to %s.=
@@ -49,6 +53,7 @@ Could not find photo id %s.=
 Could not open directory=
 Could not rename %s to %s.=
 Could not send mail.=
+Create new page=
 Created directory=
 Dated directory will be appended=
 Default view=
@@ -88,6 +93,7 @@ Most Photographed People=
 Most Photographed Places=
 Most Populated Albums=
 Most Populated Categories=
+Never=
 New Album=
 New Albums on=
 New Category=
@@ -112,8 +118,15 @@ Not rated=
 Notify User=
 Notify=
 Oldest photo=
+On all pages=
+On first page=
+On last page=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
+Page=
+Pages in this pageset=
+Pages=
+Pagesets=
 People=
 Photos (Page %s/%s)=
 Places=
@@ -143,6 +156,7 @@ There are %s photos=
 There are no photos=
 There is %s photo=
 These options are always available in the tabs on the upper right. Use the %s home %s link to return here. Click on any thumbnail to see a larger version along with information about that photo.=
+This page is used in the following pagesets:=
 This photo is not in any albums.=
 This photo is not in any categories.=
 Thumbnails=
@@ -184,6 +198,7 @@ and=
 aperture=
 automatically edit photos=
 available=
+bottom=
 by=
 bytes=
 calendar=
@@ -231,6 +246,8 @@ delete album=
 delete category=
 delete color scheme=
 delete comment=
+delete page=
+delete pageset=
 delete person=
 delete place=
 delete relationship=
@@ -298,6 +315,8 @@ middle name=
 minimum rating for random photos=
 more than=
 mother=
+move down=
+move up=
 name=
 new=
 no children=
@@ -341,6 +360,7 @@ photos taken=
 photos=
 place=
 places=
+position of original=
 position=
 prefs=
 random photo=
@@ -363,17 +383,20 @@ send fullsize=
 show additional attributes=
 show breadcrumbs=
 show descriptions under thumbnails=
+show original page=
 size of pager on results page=
 size of photos=
 size=
 skip=
 slideshow=
+smileys you can use=
 sort name=
 spouse=
 state=
 stop=
 subject=
 submit=
+text=
 that have been categorized=
 time to display each photo in a slideshow=
 time=
@@ -381,6 +404,7 @@ timestamp=
 title=
 to (email)=
 to (name)=
+top=
 unset coverphoto=
 update relationship=
 update=
