Added new strings for 0.7.3 + Bug#1985432: two different meanings for 'home'

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -6,9 +6,16 @@
 %s photo(s) selected=
 %s photos in %s=
 (left to right, front to back).=
+0 - world=
 1 - close your eyes=
 10 - museum=
+12 - neighborhood=
+16 - street=
+18 - house=
+2 - continent=
 5 - so so=
+6 - country=
+9 - city=
 A Photo from %s=
 A photo will be watermarked if the photo level is higher than the watermark level.=
 A possible cause is the upload_max_filesize variable in php.ini=
@@ -200,7 +207,9 @@ automatically edit photos=
 available=
 bottom=
 by=
+by=
 bytes=
+calculated time=
 calendar=
 called=
 camera make=
@@ -235,6 +244,7 @@ count=
 country=
 coverphoto=
 create annotated photo=
+database=
 date of birth=
 date of death=
 date=
@@ -283,9 +293,11 @@ gender=
 go=
 height=
 hide=
+home location=
 home=
 import photos=
 import=
+in minutes=
 in this album=
 in this category=
 in this place=
@@ -300,6 +312,7 @@ last ip address=
 last login=
 last modified=
 last name=
+lattitude=
 less than=
 level=
 lightbox album=
@@ -308,11 +321,14 @@ like=
 location=
 logon=
 logout=
+longitude=
 male=
+map=
 message:=
 metering mode=
 middle name=
 minimum rating for random photos=
+minutes=
 more than=
 mother=
 move down=
@@ -324,6 +340,7 @@ no last name=
 no=
 not like=
 not rated=
+not set=
 notes=
 number of breadcrumbs to show=
 number of categorized photos=
@@ -380,6 +397,7 @@ seconds=
 select=
 send as html=
 send fullsize=
+set %s for children=
 show additional attributes=
 show breadcrumbs=
 show descriptions under thumbnails=
@@ -398,9 +416,11 @@ subject=
 submit=
 text=
 that have been categorized=
+time correction=
 time to display each photo in a slideshow=
 time=
 timestamp=
+timezone=
 title=
 to (email)=
 to (name)=
@@ -424,3 +444,4 @@ writable=
 yes=
 zip or zip+4=
 zip=
+zoom level=
