Req#2021275 Expand all button for tree view

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -231,6 +231,7 @@ ccd width=
 change password=
 city=
 class=
+collapse all=
 color scheme=
 color schemes=
 cols=
@@ -277,6 +278,7 @@ edit=
 email photo=
 email=
 error=
+expand all=
 exposure=
 father=
 female=
