Bug#2059210: Overal bad performance: simplified SQL queries and made a change to the search page.

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -303,6 +303,9 @@ in minutes=
 in this album=
 in this category=
 in this place=
+include sub-albums=
+include sub-categories=
+include sub-places=
 include URL=
 insert relationship=
 is in photo=
