Bug#2274989: When changing user, password is overwritten.

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -153,6 +153,9 @@ Skipping %s: Unsupported file type.=
 Sort Name=
 Sort order for subalbums and categories=
 The image you requested could not be displayed.=
+The password for %s has been changed=
+The password may not be null=
+The passwords did not match=
 The uploaded file exceeds the MAX_UPLOAD setting in config.inc.php (%s).=
 The uploaded file exceeds the upload_max_filesize directive (%s) in php.ini.=
 The uploaded file was only partially uploaded.=
@@ -183,9 +186,6 @@ You may search for photos %s taken %s or %s modified %s in the past %s days.=
 You need to have ZIP support in PHP to download zip files=
 Your Zoph Account=
 Your mail has been sent.=
-Your password has been changed=
-Your password may not be null=
-Your passwords did not match=
 Zoph is free software.=
 Zoph stands for <strong>z</strong>oph <strong>o</strong>rganizes <strong>ph</strong>otos.=
 Zoph version %s, released %s.=
