Updated language files for v0.7.4

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -1,5 +1,5 @@
-# to create a new language file, translate these string and rename this file
-# to the two letter code for the language. Then remove this header and
+#  to create a new language file, translate these string and rename this file
+#  to the two letter code for the language. Then remove this header and
 # replace it with a header modeled after those in the other files.
 %s chars max=
 %s images loaded.=
@@ -24,6 +24,7 @@ Add a page:=
 Add comment=
 Admin=
 Adminpage=
+After this group is created it can be given access to albums.=
 After this user is created they can be given access to albums.=
 Album view=
 Albums=
@@ -109,6 +110,7 @@ New Person=
 New Photo=
 New Place=
 New User=
+New group=
 Newest photo=
 Next=
 No EXIF header found.=
@@ -181,6 +183,7 @@ Users=
 Welcome %s. %s currently contains=
 Yes=
 You can upload a single image or a zip or tar file of images.=
+You have enabled autocompletion for one or more dropdown boxes on this page, however, you do not seem to have Javascript support. You should either enable javascript or turn autocompletion off, or this page will not work as expected!=
 You have requested the download of %s photos, with a total size of %s=
 You may search for photos %s taken %s or %s modified %s in the past %s days.=
 You need to have ZIP support in PHP to download zip files=
@@ -257,6 +260,7 @@ delete album=
 delete category=
 delete color scheme=
 delete comment=
+delete group=
 delete page=
 delete pageset=
 delete person=
@@ -293,6 +297,8 @@ from (your email)=
 from (your name)=
 gender=
 go=
+group name=
+group=
 height=
 hide=
 home location=
@@ -303,10 +309,10 @@ in minutes=
 in this album=
 in this category=
 in this place=
+include URL=
 include sub-albums=
 include sub-categories=
 include sub-places=
-include URL=
 insert relationship=
 is in photo=
 is not in photo=
@@ -329,6 +335,7 @@ logout=
 longitude=
 male=
 map=
+members=
 message:=
 metering mode=
 middle name=
