Documentation update for 0.7.4

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,8 +30,8 @@ Features
     * Req#1467095: Group access rights
 
 Translation
-
-    * Fixed some errors in Dutch translation (mostly extra spaces)
+    * Fixed some errors in translations (mostly extra spaces)
+    * Updated Canadian English, Dutch and German translations
 
 Various
 
