Some missing translations added

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -78,6 +78,7 @@ For accessing these Albums you have to use this URL:=
 Full EXIF details=
 Grant access to all existing albums:=
 Granting access to an album will also grant access to that album's ancestors if required. Granting access to all albums will not overwrite previously granted permissions.=
+Groups=
 Hi=
 Highest ranked=
 Home=
@@ -299,6 +300,7 @@ gender=
 go=
 group name=
 group=
+groups=
 height=
 hide=
 home location=
@@ -369,6 +371,8 @@ or its children=
 or=
 order by=
 overwrite values below=
+pages=
+pagesets=
 parent album=
 parent category=
 parent location=
