Req#1480136: Save search results

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -50,6 +50,7 @@ Confirm deletion of '%s' and its subalbums:=
 Confirm deletion of '%s' and its subcategories:=
 Confirm deletion of '%s'=
 Confirm deletion of comment '<b>%s</b>' by '<b>%s</b>'=
+Confirm deletion of saved search '%s'=
 Confirm deletion of this page=
 Confirm deletion of this pageset=
 Confirm deletion of this relationship=
@@ -65,6 +66,7 @@ Create new page=
 Created directory=
 Dated directory will be appended=
 Default view=
+Delete saved search=
 Deleting %s=
 Description for first photo=
 Description for second photo=
@@ -149,6 +151,7 @@ Received file=
 Regards,=
 Releases and documentation can be found at %s.=
 Reports=
+Save search=
 See this photo in %s=
 Send feedback to %s.=
 Skipping %s: File does not exist.=
@@ -214,6 +217,7 @@ by=
 by=
 bytes=
 calculated time=
+calculated time=
 calendar=
 called=
 camera make=
@@ -223,6 +227,8 @@ can browse places=
 can download zipfiles=
 can import=
 can leave comments=
+can rate photos=
+can rate the same photo multiple times=
 can view details of people=
 can view details of places=
 cancel=
@@ -249,6 +255,7 @@ count=
 country=
 coverphoto=
 create annotated photo=
+database=
 database=
 date of birth=
 date of death=
@@ -316,6 +323,7 @@ include sub-albums=
 include sub-categories=
 include sub-places=
 insert relationship=
+ip address=
 is in photo=
 is not in photo=
 is not set.=
@@ -331,6 +339,7 @@ level=
 lightbox album=
 lightbox=
 like=
+load=
 location=
 logon=
 logout=
