Added a few previously forgotten translations

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -104,6 +104,7 @@ Most Photographed People=
 Most Photographed Places=
 Most Populated Albums=
 Most Populated Categories=
+Name=
 Never=
 New Album=
 New Albums on=
@@ -135,6 +136,7 @@ On first page=
 On last page=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
+Owner=
 Page=
 Pages in this pageset=
 Pages=
@@ -145,6 +147,7 @@ Places=
 Preferences=
 Prev=
 Processing %s image(s).=
+Public=
 Random=
 Reading directory=
 Received file=
@@ -152,6 +155,7 @@ Regards,=
 Releases and documentation can be found at %s.=
 Reports=
 Save search=
+Saved searches=
 See this photo in %s=
 Send feedback to %s.=
 Skipping %s: File does not exist.=
@@ -417,6 +421,7 @@ reports=
 return=
 rotate=
 rows=
+save search=
 search=
 seconds=
 select=
