Added 2 missing strings

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -327,6 +327,7 @@ include sub-albums=
 include sub-categories=
 include sub-places=
 insert relationship=
+insert=
 ip address=
 is in photo=
 is not in photo=
@@ -385,6 +386,7 @@ or=
 order by=
 overwrite values below=
 pages=
+pageset=
 pagesets=
 parent album=
 parent category=
